[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/source_hans_sans_font_theme.tres" type="Theme" id=1]
[ext_resource path="res://text_editor/main.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 1008.0
margin_bottom = 752.0

[node name="MenuButtonFile" type="MenuButton" parent="."]
margin_left = 16.0
margin_top = 8.0
margin_right = 90.0
margin_bottom = 38.0
text = "文件 File"
items = [ "打开 Open", null, 0, false, false, 0, 0, null, "", false, "保存 Save", null, 0, false, false, 1, 0, null, "", false, "退出 Exit", null, 0, false, false, 2, 0, null, "", false ]

[node name="MenuButtonHelp" type="MenuButton" parent="."]
margin_left = 112.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 38.0
text = "帮助 Help"
items = [ "关于 About", null, 0, false, false, 0, 0, null, "", false ]

[node name="FileDialogOpen" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -216.0
margin_right = 360.0
margin_bottom = 216.0
window_title = "打开文件"
mode = 0
access = 2

[node name="FileDialogSave" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.0
margin_top = -216.0
margin_right = 376.0
margin_bottom = 216.0
window_title = "保存文件"
access = 2

[node name="WindowDialogAbout" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -152.0
margin_right = 312.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="WindowDialogAbout"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -93.0
margin_right = 240.0
margin_bottom = 93.0
text = "关于

本案例参考 B 站 Hi小胡 - “【Godot】手把手教你用Godot撸一个简易记事本”实现
中文字体使用了思源黑体字体

感谢！"
align = 1
valign = 1
autowrap = true

[connection signal="file_selected" from="FileDialogOpen" to="." method="_on_FileDialogOpen_file_selected"]
[connection signal="file_selected" from="FileDialogSave" to="." method="_on_FileDialogSave_file_selected"]
